Fixed spacing at bottom of page

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,10 @@
 	font-size: 50px;
 }
 
+.gcal {
+    margin-top: 50px;
+}
+
 footer {
 	margin: 50px 0;
 }
